versions/GNDS-v2.0/GNDS/c/src/v2.0/general/Function1ds.h

// --- Const-aware handles.
typedef const struct Function1dsClass *const ConstHandle2ConstFunction1ds;
typedef       struct Function1dsClass *const ConstHandle2Function1ds;
// +++ Set, by label
extern_c void
Function1dsXYs1dSetByLabel(
   ConstHandle2Function1ds self,
   const char *const label,
   ConstHandle2ConstXYs1d XYs1d
);
// +++ Has, by index
extern_c int
Function1dsXYs1dHasByIndex(
   ConstHandle2ConstFunction1ds self,
   const int index
);
// --- Get, by index, const
extern_c Handle2ConstXYs1d
Function1dsXYs1dGetByIndexConst(
   ConstHandle2ConstFunction1ds self,
   const int index
);
// +++ Get, by index
extern_c Handle2XYs1d
Function1dsXYs1dGetByIndex(
   ConstHandle2Function1ds self,
   const int index
);
// +++ Set, by index
extern_c void
Function1dsXYs1dSetByIndex(
   ConstHandle2Function1ds self,
   const int index,
   ConstHandle2ConstXYs1d XYs1d
);
// +++ Has, by interpolation
extern_c int
Function1dsXYs1dHasByInterpolation(
   ConstHandle2ConstFunction1ds self,
   const char *const interpolation
);
// --- Get, by interpolation, const
extern_c Handle2ConstXYs1d
Function1dsXYs1dGetByInterpolationConst(
   ConstHandle2ConstFunction1ds self,
   const char *const interpolation
);
// +++ Get, by interpolation
extern_c Handle2XYs1d
Function1dsXYs1dGetByInterpolation(
   ConstHandle2Function1ds self,
   const char *const interpolation
);
// +++ Set, by interpolation
extern_c void
Function1dsXYs1dSetByInterpolation(
   ConstHandle2Function1ds self,
   const char *const interpolation,
   ConstHandle2ConstXYs1d XYs1d
);
// +++ Has, by outerDomainValue
extern_c int
Function1dsXYs1dHasByOuterDomainValue(
   ConstHandle2ConstFunction1ds self,
   const double outerDomainValue
);
// --- Get, by outerDomainValue, const
extern_c Handle2ConstXYs1d
Function1dsXYs1dGetByOuterDomainValueConst(
   ConstHandle2ConstFunction1ds self,
   const double outerDomainValue
);
// +++ Get, by outerDomainValue
extern_c Handle2XYs1d
Function1dsXYs1dGetByOuterDomainValue(
   ConstHandle2Function1ds self,
   const double outerDomainValue
);
// +++ Set, by outerDomainValue
extern_c void
Function1dsXYs1dSetByOuterDomainValue(
   ConstHandle2Function1ds self,
   const double outerDomainValue,
   ConstHandle2ConstXYs1d XYs1d
);
// -----------------------------------------------------------------------------
// Child: regions1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Function1dsRegions1dHas(ConstHandle2ConstFunction1ds self);
// +++ Clear
extern_c void
Function1dsRegions1dClear(ConstHandle2Function1ds self);
// +++ Size
extern_c size_t
Function1dsRegions1dSize(ConstHandle2ConstFunction1ds self);
// +++ Add
extern_c void
Function1dsRegions1dAdd(ConstHandle2Function1ds self, ConstHandle2ConstRegions1d regions1d);
// --- Get, by index \in [0,size), const
extern_c Handle2ConstRegions1d
Function1dsRegions1dGetConst(ConstHandle2ConstFunction1ds self, const size_t index_);
// +++ Get, by index \in [0,size)
extern_c Handle2Regions1d
Function1dsRegions1dGet(ConstHandle2Function1ds self, const size_t index_);
// +++ Set, by index \in [0,size)
extern_c void
Function1dsRegions1dSet(
   ConstHandle2Function1ds self,
   const size_t index_,
   ConstHandle2ConstRegions1d regions1d
);
// +++ Has, by label
extern_c int
Function1dsRegions1dHasByLabel(
   ConstHandle2ConstFunction1ds self,
   const char *const label
);
// --- Get, by label, const
extern_c Handle2ConstRegions1d
Function1dsRegions1dGetByLabelConst(
   ConstHandle2ConstFunction1ds self,
   const char *const label
);
// +++ Get, by label
extern_c Handle2Regions1d
Function1dsRegions1dGetByLabel(
   ConstHandle2Function1ds self,
   const char *const label
);
// +++ Set, by label
extern_c void
Function1dsRegions1dSetByLabel(
   ConstHandle2Function1ds self,
   const char *const label,
   ConstHandle2ConstRegions1d regions1d
);
// +++ Has, by outerDomainValue
extern_c int
Function1dsRegions1dHasByOuterDomainValue(
   ConstHandle2ConstFunction1ds self,
   const double outerDomainValue
);
// --- Get, by outerDomainValue, const
extern_c Handle2ConstRegions1d
Function1dsRegions1dGetByOuterDomainValueConst(
   ConstHandle2ConstFunction1ds self,
   const double outerDomainValue
);
// +++ Get, by outerDomainValue
extern_c Handle2Regions1d
Function1dsRegions1dGetByOuterDomainValue(
   ConstHandle2Function1ds self,
   const double outerDomainValue
);
// +++ Set, by outerDomainValue
extern_c void
Function1dsRegions1dSetByOuterDomainValue(
   ConstHandle2Function1ds self,
   const double outerDomainValue,
   ConstHandle2ConstRegions1d regions1d
);