versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Function1ds.f03


!! Set, by label
subroutine Function1dsXYs1dSetByLabel(handle, meta, metaSize, fieldHandle) &
      bind(C, name='Function1dsXYs1dSetByLabel')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsXYs1dSetByLabel

!! ------------------------
!! Re: metadatum index
!! ------------------------

!! Has, by index
function Function1dsXYs1dHasByIndex(handle, meta) &
      bind(C, name='Function1dsXYs1dHasByIndex') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   integer(c_int) :: has
end function Function1dsXYs1dHasByIndex

!! Get, by index, const
function Function1dsXYs1dGetByIndexConst(handle, meta) &
      bind(C, name='Function1dsXYs1dGetByIndexConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGetByIndexConst

!! Get, by index
function Function1dsXYs1dGetByIndex(handle, meta) &
      bind(C, name='Function1dsXYs1dGetByIndex') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGetByIndex

!! Set, by index
subroutine Function1dsXYs1dSetByIndex(handle, meta, fieldHandle) &
      bind(C, name='Function1dsXYs1dSetByIndex')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsXYs1dSetByIndex

!! ------------------------
!! Re: metadatum interpolation
!! ------------------------

!! Has, by interpolation
function Function1dsXYs1dHasByInterpolation(handle, meta, metaSize) &
      bind(C, name='Function1dsXYs1dHasByInterpolation') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function Function1dsXYs1dHasByInterpolation

!! Get, by interpolation, const
function Function1dsXYs1dGetByInterpolationConst(handle, meta, metaSize) &
      bind(C, name='Function1dsXYs1dGetByInterpolationConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGetByInterpolationConst

!! Get, by interpolation
function Function1dsXYs1dGetByInterpolation(handle, meta, metaSize) &
      bind(C, name='Function1dsXYs1dGetByInterpolation') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGetByInterpolation

!! Set, by interpolation
subroutine Function1dsXYs1dSetByInterpolation(handle, meta, metaSize, fieldHandle) &
      bind(C, name='Function1dsXYs1dSetByInterpolation')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsXYs1dSetByInterpolation

!! ------------------------
!! Re: metadatum outerDomainValue
!! ------------------------

!! Has, by outerDomainValue
function Function1dsXYs1dHasByOuterDomainValue(handle, meta) &
      bind(C, name='Function1dsXYs1dHasByOuterDomainValue') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   integer(c_int) :: has
end function Function1dsXYs1dHasByOuterDomainValue

!! Get, by outerDomainValue, const
function Function1dsXYs1dGetByOuterDomainValueConst(handle, meta) &
      bind(C, name='Function1dsXYs1dGetByOuterDomainValueConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGetByOuterDomainValueConst

!! Get, by outerDomainValue
function Function1dsXYs1dGetByOuterDomainValue(handle, meta) &
      bind(C, name='Function1dsXYs1dGetByOuterDomainValue') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function Function1dsXYs1dGetByOuterDomainValue

!! Set, by outerDomainValue
subroutine Function1dsXYs1dSetByOuterDomainValue(handle, meta, fieldHandle) &
      bind(C, name='Function1dsXYs1dSetByOuterDomainValue')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsXYs1dSetByOuterDomainValue


!! -----------------------------------------------------------------------------
!! Child: regions1d
!! -----------------------------------------------------------------------------

!! Has
function Function1dsRegions1dHas(handle) &
      bind(C, name='Function1dsRegions1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function Function1dsRegions1dHas

!! Clear
subroutine Function1dsRegions1dClear(handle) &
      bind(C, name='Function1dsRegions1dClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine Function1dsRegions1dClear

!! Size
function Function1dsRegions1dSize(handle) &
      bind(C, name='Function1dsRegions1dSize') &
      result(vectorSize)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: vectorSize
end function Function1dsRegions1dSize

!! Add
subroutine Function1dsRegions1dAdd(handle, fieldHandle) &
      bind(C, name='Function1dsRegions1dAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsRegions1dAdd

!! Get, by index \in [0,size), const
function Function1dsRegions1dGetConst(handle, index) &
      bind(C, name='Function1dsRegions1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function Function1dsRegions1dGetConst

!! Get, by index \in [0,size)
function Function1dsRegions1dGet(handle, index) &
      bind(C, name='Function1dsRegions1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function Function1dsRegions1dGet

!! Set, by index \in [0,size)
subroutine Function1dsRegions1dSet(handle, index, fieldHandle) &
      bind(C, name='Function1dsRegions1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsRegions1dSet

!! ------------------------
!! Re: metadatum label
!! ------------------------

!! Has, by label
function Function1dsRegions1dHasByLabel(handle, meta, metaSize) &
      bind(C, name='Function1dsRegions1dHasByLabel') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function Function1dsRegions1dHasByLabel

!! Get, by label, const
function Function1dsRegions1dGetByLabelConst(handle, meta, metaSize) &
      bind(C, name='Function1dsRegions1dGetByLabelConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function Function1dsRegions1dGetByLabelConst

!! Get, by label
function Function1dsRegions1dGetByLabel(handle, meta, metaSize) &
      bind(C, name='Function1dsRegions1dGetByLabel') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function Function1dsRegions1dGetByLabel

!! Set, by label
subroutine Function1dsRegions1dSetByLabel(handle, meta, metaSize, fieldHandle) &
      bind(C, name='Function1dsRegions1dSetByLabel')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsRegions1dSetByLabel

!! ------------------------
!! Re: metadatum outerDomainValue
!! ------------------------

!! Has, by outerDomainValue
function Function1dsRegions1dHasByOuterDomainValue(handle, meta) &
      bind(C, name='Function1dsRegions1dHasByOuterDomainValue') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   integer(c_int) :: has
end function Function1dsRegions1dHasByOuterDomainValue

!! Get, by outerDomainValue, const
function Function1dsRegions1dGetByOuterDomainValueConst(handle, meta) &
      bind(C, name='Function1dsRegions1dGetByOuterDomainValueConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function Function1dsRegions1dGetByOuterDomainValueConst

!! Get, by outerDomainValue
function Function1dsRegions1dGetByOuterDomainValue(handle, meta) &
      bind(C, name='Function1dsRegions1dGetByOuterDomainValue') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function Function1dsRegions1dGetByOuterDomainValue

!! Set, by outerDomainValue
subroutine Function1dsRegions1dSetByOuterDomainValue(handle, meta, fieldHandle) &
      bind(C, name='Function1dsRegions1dSetByOuterDomainValue')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine Function1dsRegions1dSetByOuterDomainValue


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalFunction1ds
